Add files and processing subroutines

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -24,17 +24,17 @@
    "source": [
     "# loading the data into the workspace\n",
     "\n",
-    "table_video1 = pd.read_csv('./18.01.11_BR_videos.csv', error_bad_lines=False)\n",
-    "table_video2 = pd.read_csv('./18.01.11_CA_videos.csv', error_bad_lines=False)\n",
-    "table_video3 = pd.read_csv('./18.01.11_DE_videos.csv', error_bad_lines=False)\n",
-    "table_video4 = pd.read_csv('./18.01.11_FR_videos.csv', error_bad_lines=False)\n",
-    "table_video5 = pd.read_csv('./18.01.11_GB_videos.csv', error_bad_lines=False)\n",
-    "table_video6 = pd.read_csv('./18.01.11_IN_videos.csv', error_bad_lines=False)\n",
-    "table_video7 = pd.read_csv('./18.01.11_JP_videos.csv', error_bad_lines=False)\n",
-    "table_video8 = pd.read_csv('./18.01.11_KR_videos.csv', error_bad_lines=False)\n",
-    "table_video9 = pd.read_csv('./18.01.11_MX_videos.csv', error_bad_lines=False)\n",
-    "table_video10 = pd.read_csv('./18.01.11_RU_videos.csv', error_bad_lines=False)\n",
-    "table_video11 = pd.read_csv('./18.01.11_US_videos.csv', error_bad_lines=False)\n",
+    "table_video1 = pd.read_csv('data/18.01.11_BR_videos.csv', error_bad_lines=False)\n",
+    "table_video2 = pd.read_csv('data/18.01.11_CA_videos.csv', error_bad_lines=False)\n",
+    "table_video3 = pd.read_csv('data/18.01.11_DE_videos.csv', error_bad_lines=False)\n",
+    "table_video4 = pd.read_csv('data/18.01.11_FR_videos.csv', error_bad_lines=False)\n",
+    "table_video5 = pd.read_csv('data/18.01.11_GB_videos.csv', error_bad_lines=False)\n",
+    "table_video6 = pd.read_csv('data/18.01.11_IN_videos.csv', error_bad_lines=False)\n",
+    "table_video7 = pd.read_csv('data/18.01.11_JP_videos.csv', error_bad_lines=False)\n",
+    "table_video8 = pd.read_csv('data/18.01.11_KR_videos.csv', error_bad_lines=False)\n",
+    "table_video9 = pd.read_csv('data/18.01.11_MX_videos.csv', error_bad_lines=False)\n",
+    "table_video10 = pd.read_csv('data/18.01.11_RU_videos.csv', error_bad_lines=False)\n",
+    "table_video11 = pd.read_csv('data/18.01.11_US_videos.csv', error_bad_lines=False)\n",
     "\n",
     "table_videos = pd.concat([table_video1, table_video2, table_video3, table_video4, table_video5, \n",
     "                          table_video6, table_video7, table_video8, table_video9, table_video10, table_video11])"
@@ -297,7 +297,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -309,7 +311,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -320,5 +322,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
